<resources>
    <string name="app_name">My Kotlin Project</string>
    <string name="user_errr">Please enter the username</string>
    <string name="user_pwd">Please enter the password</string>
    <string name="login_success">You are login successfully</string>
    <string name="internet_connection">Please check your internet connection</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>

    <string name="oops">Oops</string>
    <string name="list">Sample List</string>
    <string name="no_data_avail">No data available</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="status">Status</string>
    <string name="msg">Message</string>
    <string name="del_type">Delivery Type</string>
    <string name="provider">Provider</string>
    <string name="arrayofobject">Array(Object) using Retrofit,Recyclerview</string>
    <string name="obj_array">Object(multiple array) using Retrofit,Recyclerview</string>

</resources>
