<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.ObjectWithMultiArray">

    <TextView
            android:id="@+id/Tvstatus"
            android:text="@string/status"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/Tv_msg"
            android:text="@string/msg"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">
        <TextView
                android:id="@+id/Tv_deliverytype"
                android:text="@string/del_type"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/delivery_RV"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/Tv_provider"
                android:text="@string/provider"
                android:padding="10dp"
                android:textStyle="bold"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/provider_RV"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


</LinearLayout>