<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/lavendar_light"
>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:ignore="UselessParent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:id="@+id/Rel_login_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="120dp"-->
                <!--android:src="@drawable/applogin" />-->
                <TextView
                        android:id="@+id/login_title_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="50dp"
                        android:textColor="@color/dark"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Rel_login_img"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp">

                <EditText
                        android:id="@+id/ET_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:lines="1"
                        android:background="@drawable/et_background"
                        android:hint="@string/user_name"
                        android:inputType="textEmailAddress"
                        android:text="hfbhsbf"
                        android:padding="14dp"
                        android:textColorHint="@color/grey"
                        android:textSize="13sp" tools:ignore="TextViewEdits"/>

                <EditText
                        android:id="@+id/ET_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ET_username"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/et_background"
                        android:hint="@string/password"
                        android:padding="14dp"
                        android:maxLines="1"
                        android:text="hfbhsbf"

                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:lines="1"
                        android:textColorHint="@color/grey"
                        android:textSize="13sp" tools:ignore="TextViewEdits"/>

                <Button
                        android:id="@+id/BTN_Login"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:layout_below="@+id/ET_pwd"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/bt_background"
                        android:text="@string/login"
                        android:textColor="@android:color/white"/>


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>